Fix Twitter button spacing on small screens

--- a/style.css
+++ b/style.css
@@ -192,4 +192,12 @@
 .twitter-share-button {
     margin: 0 0 0 1rem;
     vertical-align: middle;
+
+}
+
+@media (max-width: 599px) {
+    .twitter-share-button {
+        display: block;
+        margin: 1rem 0;
+    }
 }
